--- a/maven/rms-parent/pom.xml
+++ b/maven/rms-parent/pom.xml
@@ -4,49 +4,30 @@
 	<artifactId>rms-parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>rms-parent</name>
+	<packaging>pom</packaging>
   
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.4.3.RELEASE</version>
     </parent>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-    </dependencies>
-
+    
     <properties>
         <java.version>1.8</java.version>
     </properties>
 
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-    <packaging>pom</packaging>
     <modules>
     	<module>../rms-jpa</module>
     	<module>../rms-services</module>
+    	<module>../rms-web</module>
     </modules>
+    
     <dependencyManagement>
     	<dependencies>
     		<dependency>
 				<groupId>org.springframework.data</groupId>
 				<artifactId>spring-data-jpa</artifactId>
 				<version>1.10.6.RELEASE</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-core</artifactId>
-				<version>4.3.5.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>mysql</groupId>
