Beginning of the GUI

--- a/maven/rms-donation-manager/src/main/resources/application.properties
+++ b/maven/rms-donation-manager/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/rmsdb?serverTimezone=UTC
-spring.datasource.username=rsm-user
-spring.datasource.password=rms-password
+spring.datasource.username=root
+spring.datasource.password=ealo
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.initialize=true		
