--- a/rms-donation-manager/src/main/resources/application.properties
+++ b/rms-donation-manager/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/rmsdb?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=ealo
+spring.datasource.url=jdbc:mysql://localhost:3306/rmsdb?serverTimezone=UTC&useSSL=false
+spring.datasource.username=rms-user
+spring.datasource.password=rms-password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.initialize=true		
