--- a/rms-donation-manager/src/main/resources/application.properties
+++ b/rms-donation-manager/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/rmsdb?serverTimezone=UTC&useSS
 spring.datasource.username=rms-user
 spring.datasource.password=rms-password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.initialize=true		
+#spring.datasource.platform=mysql
