--- a/rms-donation-manager/src/main/docker/Dockerfile
+++ b/rms-donation-manager/src/main/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM container-registry.oracle.com/java/serverjre:8
 VOLUME /tmp
-ARG JAR_FILE
+EXPOSE 80
 ADD maven/${project.build.finalName}.jar app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
