--- a/rms-donation-manager/src/main/resources/application.properties
+++ b/rms-donation-manager/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=80
 spring.datasource.url=jdbc:mysql://localhost:3306/rmsdb?serverTimezone=UTC&useSSL=false
 spring.datasource.username=rms-user
 spring.datasource.password=rms-password
