added logging of SQL queries but commented them out

--- a/rms-donation-manager/src/main/resources/application.properties
+++ b/rms-donation-manager/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=rms-user
 spring.datasource.password=rms-password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.platform=mysql
+
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
