--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,4 +26,6 @@ jobs:
           maven-version: 3.9.9
 
       - name: Run Unit Test
-        run: mvn clean install
+        run: |
+          cd rms-donation-manager
+          mvn clean install
