--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Hello World
+name: Pipeline
 
 on:
   workflow_dispatch:
@@ -28,4 +28,4 @@ jobs:
       - name: Run Unit Test
         run: |
           cd rms-donation-manager
-          mvn clean install
+          mvn clean test
