--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,3 +29,34 @@ jobs:
         run: |
           cd rms-donation-manager
           mvn clean test
+
+
+  upload:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'microsoft'
+          java-version: '21'
+      
+      - name: Setup Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.9.9
+
+      - name: Run Unit Test
+        run: |
+          cd rms-donation-manager
+          mvn clean install
+      
+      - name: upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: my-artifact
+          path: rms-donation-manager/target/*.jar
+  
+      
